# aer

./: Cargo.toml  EXAMPLE.ENV  README.md
src/: forecast.rs  lib.rs  main.rs  sensor.rs  static_vars.rs  time.rs  weather.rs
