[package]
name = "aer"
version = "0.1.0"
authors = ["Chris <caemor@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#embedded-graphics = {path = "../embedded-graphics/embedded-graphics"}#= {path = "../embedded-graphics/simulator"}#= {git = "https://github.com/jamwaffles/embedded-graphics", branch = "master"}
#embedded-graphics-simulator = {path = "../embedded-graphics/simulator"}#= {git = "https://github.com/jamwaffles/embedded-graphics", branch = "master", optional = true}
anyhow = "1.0.27"
bme680 = "0.5.0"
chrono = "0.4.9"
dotenv = "0.15.0"
embedded-graphics = { version = "0.6.1"}
embedded-graphics-simulator = {version = "0.2.0", optional = true}
embedded-hal = {version = "0.2.3", features = ["unproven"]}
embedded-weather-icons = { git = "https://github.com/marcelbuesing/embedded-weather-icons.git", branch = "master", features = ["icons32x32"] }
env_logger = "0.7.1"
epd-waveshare = "0.4.0"
futures-executor = {version = "0.3.4"}
influx_db_client = { git = "https://github.com/caemor/InfluxDBClient-rs", default-features = false, features = ["rustls-tls"] }
lazy_static = "1.4.0"
linux-embedded-hal = "0.3.0"
log = "0.4.8"
openweather = { git = "https://github.com/caemor/openweather"}
profont = "0.4"
tinybmp = { version = "0.2", features = ["graphics"] }
tokio = "0.2.13"


[features]
default = []

#graphics = ["embedded-graphics"]
# epd1in54 = ["epd-waveshare/epd1in54"]
epd2in9 = []
epd4in2 = []
simulator = ["embedded-graphics-simulator"]
# offers an alternative fast full lut for type_a displays, but the refresh isnt as clean looking
#type_a_alternative_faster_lut = []

[profile.release]
codegen-units=1

[package.metadata.deb.variants.epd2in9]
features = ["epd2in9"]

[package.metadata.deb.variants.epd4in2]
features = ["epd4in2"]
